--- a/CarRentalApp/CarRentalApp/Base.lproj/Main.storyboard
+++ b/CarRentalApp/CarRentalApp/Base.lproj/Main.storyboard
@@ -87,6 +87,56 @@
             </objects>
             <point key="canvasLocation" x="70.992366412213741" y="-2.1126760563380285"/>
         </scene>
+        <!--Item 2-->
+        <scene sceneID="r3l-in-U8Z">
+            <objects>
+                <viewController id="D2F-hH-I14" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WOM-Oo-nH6">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="r6p-SC-RIm"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="RDb-1P-j8R"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BTW-Mb-v7U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1683" y="328"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="Fjg-yb-1e3">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m8d-2W-Jze" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController id="bT5-pc-Ob7" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pgc-eT-To1">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="fHA-Fk-0ku"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="OBr-Aa-wPt"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1683" y="-278"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="NTM-bA-hpk">
+            <objects>
+                <tabBarController id="1y8-CA-UpE" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rQb-AD-Uqa">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="bT5-pc-Ob7" kind="relationship" relationship="viewControllers" id="By6-Bn-3Sl"/>
+                        <segue destination="D2F-hH-I14" kind="relationship" relationship="viewControllers" id="fig-xL-5PA"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f1K-xg-yUI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="777" y="25"/>
+        </scene>
         <!--Home Controller-->
         <scene sceneID="6vA-3W-AUL">
             <objects>
@@ -99,6 +149,9 @@
                                 <rect key="frame" x="25.666666666666657" y="75" width="341.66666666666674" height="59.666666666666657"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="searchFieldTyped:" destination="3nM-uv-mks" eventType="editingChanged" id="Dhp-cL-ccg"/>
+                                </connections>
                             </textField>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kd8-qx-m8Y">
                                 <rect key="frame" x="0.0" y="154.66666666666663" width="393" height="594"/>
@@ -107,11 +160,11 @@
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="10" minY="50" maxX="10" maxY="50"/>
+                                    <inset key="sectionInset" minX="10" minY="20" maxX="10" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="aPD-GG-dos">
-                                        <rect key="frame" x="10" y="50" width="128" height="128"/>
+                                        <rect key="frame" x="10" y="20" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="nAx-B6-bgs">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -120,16 +173,6 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J4a-2e-Cut">
-                                <rect key="frame" x="0.0" y="762" width="393" height="49"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <items>
-                                    <tabBarItem title="Vehicles" image="steeringwheel" catalog="system" id="sRn-Xe-3J8"/>
-                                    <tabBarItem title="Search" image="magnifyingglass" catalog="system" id="i8O-lM-fQe"/>
-                                    <tabBarItem title="Account" image="person.crop.circle.fill" catalog="system" id="ARU-Kb-QtN"/>
-                                </items>
-                            </tabBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="wVA-dK-Ws7"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
@@ -153,15 +196,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5iO-c6-Urd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="974.80916030534343" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="2358" y="-2"/>
         </scene>
     </scenes>
     <resources>
         <image name="driveitlogo" width="500" height="500"/>
-        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
-        <image name="person.crop.circle.fill" catalog="system" width="128" height="123"/>
         <image name="signin" width="750" height="1334"/>
-        <image name="steeringwheel" catalog="system" width="128" height="123"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
