--- a/CarRentalApp/CarRentalApp/Scene/HomeVC/HeaderCollectionView/CategoryView.xib
+++ b/CarRentalApp/CarRentalApp/Scene/HomeVC/HeaderCollectionView/CategoryView.xib
@@ -11,12 +11,16 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR" customClass="CategoryView" customModule="CarRentalApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="298"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="vp8-wq-Fol">
-                    <rect key="frame" x="0.0" y="0.0" width="393" height="298"/>
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="150"/>
                     <color key="backgroundColor" systemColor="systemGray6Color"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="393" id="5Gm-yI-hOO"/>
+                        <constraint firstAttribute="height" constant="150" id="dyv-AP-PpY"/>
+                    </constraints>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aE1-Vj-YDa">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -24,18 +28,27 @@
                         <inset key="sectionInset" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Available vehicles" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wu5-9d-uvk">
+                    <rect key="frame" x="20" y="170" width="160" height="20"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
             <constraints>
-                <constraint firstItem="vp8-wq-Fol" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="6qp-Sb-hfv"/>
-                <constraint firstItem="vp8-wq-Fol" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" id="D9a-10-nhI"/>
-                <constraint firstAttribute="bottom" secondItem="vp8-wq-Fol" secondAttribute="bottom" id="DDz-ia-GGP"/>
-                <constraint firstItem="vp8-wq-Fol" firstAttribute="trailing" secondItem="VXr-Tz-HHm" secondAttribute="trailing" id="tCc-Pe-94L"/>
+                <constraint firstItem="wu5-9d-uvk" firstAttribute="width" secondItem="U6b-Vx-4bR" secondAttribute="width" multiplier="0.407125" id="En7-qm-xlV"/>
+                <constraint firstItem="vp8-wq-Fol" firstAttribute="trailing" secondItem="VXr-Tz-HHm" secondAttribute="trailing" id="Gxt-8C-Mzp"/>
+                <constraint firstItem="vp8-wq-Fol" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" id="NF7-da-wlW"/>
+                <constraint firstItem="vp8-wq-Fol" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="Zoe-JY-wcB"/>
+                <constraint firstItem="wu5-9d-uvk" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" constant="20" id="hYp-qJ-ROq"/>
+                <constraint firstItem="vp8-wq-Fol" firstAttribute="centerX" secondItem="VXr-Tz-HHm" secondAttribute="centerX" id="pQO-gu-OQY"/>
+                <constraint firstItem="wu5-9d-uvk" firstAttribute="top" secondItem="vp8-wq-Fol" secondAttribute="bottom" constant="20" id="rX0-si-Vx6"/>
             </constraints>
             <connections>
                 <outlet property="headerCollectionView" destination="vp8-wq-Fol" id="yjI-47-9b9"/>
             </connections>
-            <point key="canvasLocation" x="-25.190839694656489" y="85.91549295774648"/>
+            <point key="canvasLocation" x="-25.954198473282442" y="85.91549295774648"/>
         </collectionReusableView>
     </objects>
     <resources>
