--- a/CarRentalApp/CarRentalApp/Base.lproj/Main.storyboard
+++ b/CarRentalApp/CarRentalApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1y8-CA-UpE">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
@@ -87,37 +87,79 @@
             </objects>
             <point key="canvasLocation" x="70.992366412213741" y="-2.1126760563380285"/>
         </scene>
-        <!--Item 2-->
+        <!--Search Controller-->
         <scene sceneID="r3l-in-U8Z">
             <objects>
-                <viewController id="D2F-hH-I14" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchController" id="D2F-hH-I14" customClass="SearchController" customModule="CarRentalApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WOM-Oo-nH6">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dSE-2L-z2Q">
+                                <rect key="frame" x="40.666666666666657" y="103" width="312" height="62"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nbS-qo-3kW">
+                                        <rect key="frame" x="20" y="1" width="292" height="60"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="searchFieldTyped:" destination="3nM-uv-mks" eventType="editingChanged" id="JFc-28-bAg"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="nbS-qo-3kW" firstAttribute="top" secondItem="dSE-2L-z2Q" secondAttribute="top" constant="1" id="Smi-9j-Mlj"/>
+                                    <constraint firstItem="nbS-qo-3kW" firstAttribute="centerY" secondItem="dSE-2L-z2Q" secondAttribute="centerY" id="VT2-dD-IQg"/>
+                                    <constraint firstItem="nbS-qo-3kW" firstAttribute="leading" secondItem="dSE-2L-z2Q" secondAttribute="leading" constant="20" id="qwA-sX-JV7"/>
+                                    <constraint firstAttribute="trailing" secondItem="nbS-qo-3kW" secondAttribute="trailing" id="tWF-A2-GVd"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ECd-5G-DKr">
+                                <rect key="frame" x="0.0" y="191" width="393" height="582"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="mHD-6I-egT">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="20"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vR5-jy-TuP">
+                                        <rect key="frame" x="10" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="F3a-CO-fYZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="r6p-SC-RIm"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        <constraints>
+                            <constraint firstItem="dSE-2L-z2Q" firstAttribute="leading" secondItem="ECd-5G-DKr" secondAttribute="trailing" constant="-352.33333333333337" id="DJz-QF-Lh8"/>
+                            <constraint firstItem="dSE-2L-z2Q" firstAttribute="centerX" secondItem="r6p-SC-RIm" secondAttribute="centerX" id="GFg-LP-joT"/>
+                            <constraint firstItem="ECd-5G-DKr" firstAttribute="leading" secondItem="dSE-2L-z2Q" secondAttribute="trailing" constant="-352.33333333333326" id="bWa-SA-k67"/>
+                            <constraint firstItem="ECd-5G-DKr" firstAttribute="centerX" secondItem="dSE-2L-z2Q" secondAttribute="centerX" id="eRh-TF-ho6"/>
+                            <constraint firstItem="ECd-5G-DKr" firstAttribute="top" secondItem="dSE-2L-z2Q" secondAttribute="bottom" constant="26" id="fj3-06-iKw"/>
+                            <constraint firstItem="dSE-2L-z2Q" firstAttribute="height" secondItem="WOM-Oo-nH6" secondAttribute="height" multiplier="0.07277" id="gfe-q2-ffk"/>
+                            <constraint firstItem="ECd-5G-DKr" firstAttribute="height" secondItem="dSE-2L-z2Q" secondAttribute="height" multiplier="9.58065" constant="-12" id="hWw-mM-g1S"/>
+                            <constraint firstItem="dSE-2L-z2Q" firstAttribute="top" secondItem="r6p-SC-RIm" secondAttribute="top" id="lQz-HR-m2Z"/>
+                            <constraint firstItem="dSE-2L-z2Q" firstAttribute="width" secondItem="WOM-Oo-nH6" secondAttribute="width" multiplier="0.793893" id="tR6-oH-5pI"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="RDb-1P-j8R"/>
+                    <navigationItem key="navigationItem" id="yZZ-TS-4yR"/>
+                    <connections>
+                        <outlet property="backgroundSearch" destination="dSE-2L-z2Q" id="6LN-P1-cso"/>
+                        <outlet property="collection" destination="ECd-5G-DKr" id="RmE-SY-9HY"/>
+                        <outlet property="searchTextField" destination="nbS-qo-3kW" id="LdP-Cq-Zau"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BTW-Mb-v7U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1683" y="328"/>
-        </scene>
-        <!--Item 1-->
-        <scene sceneID="Fjg-yb-1e3">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="m8d-2W-Jze" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <viewController id="bT5-pc-Ob7" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="pgc-eT-To1">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="fHA-Fk-0ku"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="OBr-Aa-wPt"/>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="1683" y="-278"/>
+            <point key="canvasLocation" x="2606.8702290076335" y="405.63380281690144"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="NTM-bA-hpk">
@@ -129,13 +171,13 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="bT5-pc-Ob7" kind="relationship" relationship="viewControllers" id="By6-Bn-3Sl"/>
-                        <segue destination="D2F-hH-I14" kind="relationship" relationship="viewControllers" id="fig-xL-5PA"/>
+                        <segue destination="M6P-aq-epv" kind="relationship" relationship="viewControllers" id="pFI-M0-8QH"/>
+                        <segue destination="SJ5-1g-BzU" kind="relationship" relationship="viewControllers" id="tRy-l7-FVm"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f1K-xg-yUI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="777" y="25"/>
+            <point key="canvasLocation" x="863" y="-2"/>
         </scene>
         <!--Home Controller-->
         <scene sceneID="6vA-3W-AUL">
@@ -146,7 +188,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4I9-iK-CjZ">
-                                <rect key="frame" x="25.666666666666657" y="75" width="341.66666666666674" height="59.666666666666657"/>
+                                <rect key="frame" x="25.666666666666657" y="119.00000000000001" width="341.66666666666674" height="59.666666666666671"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -154,7 +196,7 @@
                                 </connections>
                             </textField>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kd8-qx-m8Y">
-                                <rect key="frame" x="0.0" y="154.66666666666663" width="393" height="594"/>
+                                <rect key="frame" x="0.0" y="199" width="393" height="587"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="jUD-jq-yYs">
                                     <size key="itemSize" width="128" height="128"/>
@@ -181,7 +223,7 @@
                             <constraint firstItem="4I9-iK-CjZ" firstAttribute="width" secondItem="biQ-ry-msf" secondAttribute="width" multiplier="0.65" constant="85.900000000000034" id="3sM-et-sCF"/>
                             <constraint firstItem="kd8-qx-m8Y" firstAttribute="width" secondItem="biQ-ry-msf" secondAttribute="width" id="7nY-ZZ-ffm"/>
                             <constraint firstItem="4I9-iK-CjZ" firstAttribute="height" secondItem="biQ-ry-msf" secondAttribute="height" multiplier="0.07" id="JgD-H4-PJM"/>
-                            <constraint firstItem="kd8-qx-m8Y" firstAttribute="height" secondItem="biQ-ry-msf" secondAttribute="height" multiplier="0.150235" constant="465.99977999999999" id="NYv-Mb-qG2"/>
+                            <constraint firstItem="kd8-qx-m8Y" firstAttribute="height" secondItem="biQ-ry-msf" secondAttribute="height" multiplier="0.150235" constant="458.99977999999999" id="NYv-Mb-qG2"/>
                             <constraint firstItem="wVA-dK-Ws7" firstAttribute="trailing" secondItem="kd8-qx-m8Y" secondAttribute="trailing" id="U7R-bc-QXC"/>
                             <constraint firstItem="kd8-qx-m8Y" firstAttribute="leading" secondItem="wVA-dK-Ws7" secondAttribute="leading" id="XPW-3U-I8j"/>
                             <constraint firstItem="4I9-iK-CjZ" firstAttribute="centerX" secondItem="wVA-dK-Ws7" secondAttribute="centerX" id="Y9o-Du-yLH"/>
@@ -189,6 +231,7 @@
                             <constraint firstItem="4I9-iK-CjZ" firstAttribute="top" secondItem="wVA-dK-Ws7" secondAttribute="top" constant="16" id="nqR-ru-nkI"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Vj4-wL-VYp"/>
                     <connections>
                         <outlet property="searchTextField" destination="4I9-iK-CjZ" id="ded-UW-r8q"/>
                         <outlet property="topCollectionView" destination="kd8-qx-m8Y" id="GbS-hN-QQr"/>
@@ -196,12 +239,52 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5iO-c6-Urd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2358" y="-2"/>
+            <point key="canvasLocation" x="2606.8702290076335" y="-385.21126760563385"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="dpM-OD-Z0P">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SJ5-1g-BzU" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="RDb-1P-j8R"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1jn-LI-KSv">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="D2F-hH-I14" kind="relationship" relationship="rootViewController" id="EHg-FT-HVO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xbS-6s-G9X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1681.679389312977" y="405.63380281690144"/>
+        </scene>
+        <!--Vehicles-->
+        <scene sceneID="PTf-ff-tSd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="M6P-aq-epv" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Vehicles" image="steeringwheel" catalog="system" id="ny5-jk-MhH"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Y2x-9z-MVF">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="3nM-uv-mks" kind="relationship" relationship="rootViewController" id="WiX-c3-nLk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8BU-9i-RtY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1681.679389312977" y="-385.21126760563385"/>
         </scene>
     </scenes>
     <resources>
         <image name="driveitlogo" width="500" height="500"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="signin" width="750" height="1334"/>
+        <image name="steeringwheel" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
